# treat-dispenser-api

./: .dockerignore  .env.template  .env.test  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build-image-local.sh  build-pi4-binary.sh  justfile  setup_dev_env.sh
3d_printing/: Base Custom Wide v2.stl  Motor Base.stl  Rotor Custom - Readjusted Shaft Position v2.stl  Rotor Custom v7.stl
config/: config.yaml  treat-dispenser-api.service
debian/: postinst  postrm
src/: application_state.rs  auth.rs  config.rs  dispenser.rs  error.rs  health.rs  lib.rs  main.rs  motor.rs  route.rs  state.rs
src/middleware/: auth.rs
src/motor/: config.rs  mod.rs  stepper_28byj48.rs  stepper_mock.rs  stepper_nema14.rs
src/routes/: auth.rs  dispense.rs  mod.rs  sensors.rs  status.rs
src/sensors/: ina219.rs  mod.rs  power_monitor.rs  sensor_hx711.rs  sensor_ina219.rs  sensor_mock.rs
src/services/: auth.rs  dispenser.rs  mod.rs  power_monitor.rs  status.rs  weight_monitor.rs
src/utils/: datetime.rs  filesystem.rs  gpio.rs  mod.rs  state_helpers.rs
tests/: integration.rs
