[package]
name = "treat-dispenser-api"
version = "0.3.2"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tower-http = { version = "0.6", features = ["trace"]}
rppal = "0.22.1"
sysinfo = "0.35.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"