[package]
name = "treat-dispenser-api"
version = "1.2.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tower-http = { version = "0.6", features = ["trace"]}
rppal = "0.22.1"
sysinfo = "0.35.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"
regex = "1.11.1"
serde_yaml = "0.9.34"


[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
