[package]
name = "treat-dispenser-api"
version = "1.3.4"
edition = "2024"


[package.metadata.deb]
maintainer = "Vincent Chu"
copyright = "2025, Vincent Chu <contact@vincentchu.io>"
license-file = ["LICENSE", "3"]
extended-description = "API server for controlling a pet treat dispenser"
depends = "$auto, systemd"
section = "utils"
priority = "optional"
assets = [
    ["target/release/treat-dispenser-api", "usr/bin/", "755"],
    ["config/config.yaml", "etc/treat-dispenser-api/", "644"],
    ["config/treat-dispenser-api.service", "lib/systemd/system/", "644"],
    ["README.md", "usr/share/doc/treat-dispenser-api/", "644"],
]
conf-files = ["/etc/treat-dispenser-api/config.yaml"]
maintainer-scripts = "debian/"
systemd-units = { unit-name = "treat-dispenser-api" }

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tower-http = { version = "0.6", features = ["trace"]}
rppal = "0.22.1"
sysinfo = "0.35.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"
regex = "1.11.1"
serde_yaml = "0.9.34"
rand = "0.9.2"


[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
